[package]
name = "marseille"
version = "0.0.0"
edition = "2021"
authors = [
        "Gabriel Falcão <gabriel@nacaolivre.org>",
]
documentation = "https://docs.rs/marseille"
description = "Marseille is a plaintext-to-morse-code encoding library and command-line tool."
readme = "README.md"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.2", features = ["derive"] }
wasm-bindgen = "0.2.86"


[lib]
name = "marseille"
path = "src/lib.rs"

[[bin]]
name = "morsel"
path = "src/mushroom.rs"
bench = false
